fix: try to prevent layout shift

--- a/src/pages/ContentPage/ContentPage.module.scss
+++ b/src/pages/ContentPage/ContentPage.module.scss
@@ -2,7 +2,7 @@
 
 .content-wrapper {
   max-width: 60rem;
-  align-self: center;
+  margin: 0 auto;
 
   h1 {
     font-size: 3rem;
